--- a/TrackYourTrials.html
+++ b/TrackYourTrials.html
@@ -5,7 +5,7 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
 	<script type="text/javascript" language="javascript" type="application/javascript" src="angular.min.js"></script>
     <script type="text/javascript" language="javascript" type="application/javascript" src="test_experiment2.js"></script>
-			<link rel="stylesheet" type="text/css" href="Attempt1.css" /> 
+			<link rel="stylesheet" type="text/css" href="TrackYourTrials.css" /> 
 	<meta charset="utf-8">
   </head>
   
