Cleanup of files and creating directories

--- a/FrontPage.html
+++ b/FrontPage.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html ng-app="tabRunner">
   <head>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-	<script src="angular.min.js"></script>
-	<script type="text/javascript" language="javascript" type="application/javascript" src="angular.min.js"></script>
-    <script type="text/javascript" language="javascript" type="application/javascript" src="test_experiment2.js"></script>
-			<link rel="stylesheet" type="text/css" href="TrackYourTrials.css" /> 
+    <link rel="stylesheet" type="text/css" href="resources/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="resources/TrackYourTrials.css" /> 
+	<script type="text/javascript" language="javascript" type="application/javascript" src="scripts/angular.min.js"></script>
+    <script type="text/javascript" language="javascript" type="application/javascript" src="scripts/test_experiment2.js"></script>
 	<meta charset="utf-8">
   </head>
   
@@ -61,8 +60,8 @@
 	  <p><a class="btn btn-primary btn-lg" href="TrackYourTrials.html" role="button">Start Tracking Your Trials!</a></p>
 	</div>
 	
-	<div id="logo">
-		<img src="courthouse_logo.png" alt="TrialTracker" style="width:64px;height:64px">
+	<div id="logo" style="text-align:center">
+		<img src="resources/courthouse_logo.png" alt="TrialTracker" style="width:64px;height:64px">
 	</div>
 	
 		<!-- Latest compiled and minified JavaScript -->
