--- a/TeamRankings.htm
+++ b/TeamRankings.htm
@@ -2,6 +2,11 @@
 <html>
 <head>
     <title></title>
+	<link rel="stylesheet" type="text/css" href="resources/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="resources/TrackYourTrials.css" /> 
+	<script type="text/javascript" language="javascript" type="application/javascript" src="scripts/angular.min.js"></script>
+    <script type="text/javascript" language="javascript" type="application/javascript" src="scripts/test_experiment2.js"></script>
+	<meta charset="utf-8">
     <script>
         //ThenBy.JS microlibrary is Copyright 2013 Teun Duynstee
 		//
@@ -9,34 +14,33 @@
 		//you may not use this file except in compliance with the License.
 		//You may obtain a copy of the License at
 			//http://www.apache.org/licenses/LICENSE-2.0
-			
         var firstBy=(function(){function e(f){f.thenBy=t;return f}function t(y,x){x=this;return e(function(a,b){return x(a,b)||y(a,b)})}return e})();
         // data: team information
 		// need to figure out how to instantiate these as real objects
         var data = [
-            { number: 1022, name: "Macalester A", ballots: 4, cs: 10, pd: 23, impermissibles: [1024, 2000] },
-            { number: 1023, name: "Macalester B", ballots: 3, cs: 11, pd: 20, impermissibles: [1000, 2000] },
-            { number: 1024, name: "Macalester C", ballots: 4, cs: 10, pd: 21, impermissibles: [1022, 2000] },
-			{ number: 1361, name: "Macalester D", ballots: 2, cs: 12, pd: -6, impermissibles: [1000, 2000] },
-			{ number: 1361, name: "U of M A", ballots: 2, cs: 15, pd: -6, impermissibles: [1000, 2000] },
-			{ number: 9999, name: "Bye Team", ballots: 1, cs: 4, pd: 50, impermissibles: [1000, 2000] } 
+            { uniqueID: 1022, name: "Macalester A", record: 4, combinedStr: 10, pointDiff: 23, impermissibles: [1024, 2000] },
+            { uniqueID: 1023, name: "Macalester B", record: 3, combinedStr: 11, pointDiff: 20, impermissibles: [1000, 2000] },
+            { uniqueID: 1024, name: "Macalester C", record: 4, combinedStr: 10, pointDiff: 21, impermissibles: [1022, 2000] },
+			{ uniqueID: 1361, name: "Macalester D", record: 2, combinedStr: 12, pointDiff: -6, impermissibles: [1000, 2000] },
+			{ uniqueID: 1361, name: "U of M A", record: 2, combinedStr: 15, pointDiff: -6, impermissibles: [1000, 2000] },
+			{ uniqueID: 9999, name: "Bye Team", record: 1, combinedStr: 4, pointDiff: 50, impermissibles: [1000, 2000] } 
         ];
 		//output function prints to html
         function output() {
             for (var i = 0; i < data.length; i++) {
                 document.write("<strong>" + data[i].name + "</strong><br/>");
-				document.write("Ballots: " + data[i].ballots + "<br/>");
-				document.write("CS: " + data[i].cs + "<br/>");
-				document.write("PD: " + data[i].pd + "<br/>");
+				document.write("Ballots: " + data[i].record + "<br/>");
+				document.write("CS: " + data[i].combinedStr + "<br/>");
+				document.write("PD: " + data[i].pointDiff + "<br/>");
 			}
             document.write("<br/>");
         }
         output(); //print unsorted data
 		
 		//reads for impermissibles
-		function isImpermissible(number, list) {
+		function isImpermissible(uniqueID, list) {
 			for (var x = 0; x < list.length; x++){
-				if (list[x] == number){
+				if (list[x] == uniqueID){
 						return true;
 					}
 				}
@@ -50,10 +54,10 @@
 		}
 			
 		
-        // first by ballots, then by cs, then by pd
-        s = firstBy(function (v1, v2) { return v2.ballots - v1.ballots; })
-                 .thenBy(function (v1, v2) { return v2.cs - v1.cs ; })
-				 .thenBy(function (v1, v2) { return v2.pd - v1.pd ; });
+        // first by record, then by combinedStr, then by pointDiff
+        s = firstBy(function (v1, v2) { return v2.record - v1.record; })
+                 .thenBy(function (v1, v2) { return v2.combinedStr - v1.combinedStr ; })
+				 .thenBy(function (v1, v2) { return v2.pointDiff - v1.pointDiff ; });
         data.sort(s);
 		output();
 		
@@ -68,7 +72,7 @@
 		for (var i = 0; i < pairs.length; i++) {
 			teamsinPair = pairs[i];
             document.write((i+1) + ": " +teamsinPair[0].name + " " + teamsinPair[1].name);	
-			if (isImpermissible(teamsinPair[0].number, teamsinPair[1].impermissibles) || isImpermissible(teamsinPair[1].number, teamsinPair[0].impermissibles)){
+			if (isImpermissible(teamsinPair[0].uniqueID, teamsinPair[1].impermissibles) || isImpermissible(teamsinPair[1].uniqueID, teamsinPair[0].impermissibles)){
 				document.write(" Impermissible!")
 			}
 			document.write(" <br/>");
@@ -81,7 +85,7 @@
 			if ((i+1)<=pairs.length){lowerPair = pairs[i+1]}
 			else {lowerPair = null}
 			teamsinPair = pairs[i];
-			if (isImpermissible(teamsinPair[0].number, teamsinPair[1].impermissibles) || isImpermissible(teamsinPair[1].number, teamsinPair[0].impermissibles)){
+			if (isImpermissible(teamsinPair[0].uniqueID, teamsinPair[1].impermissibles) || isImpermissible(teamsinPair[1].uniqueID, teamsinPair[0].impermissibles)){
 				possibleSwaps(teamsinPair, upperPair, lowerPair)
 				//move edge checking logic to here
 			}
