--- a/TrackYourTrials.html
+++ b/TrackYourTrials.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html ng-app="tabRunner">
   <head>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
-	<script type="text/javascript" language="javascript" type="application/javascript" src="angular.min.js"></script>
-    <script type="text/javascript" language="javascript" type="application/javascript" src="test_experiment2.js"></script>
-			<link rel="stylesheet" type="text/css" href="TrackYourTrials.css" /> 
+    <link rel="stylesheet" type="text/css" href="resources/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="resources/TrackYourTrials.css" /> 
+	<script type="text/javascript" language="javascript" type="application/javascript" src="scripts/angular.min.js"></script>
+    <script type="text/javascript" language="javascript" type="application/javascript" src="scripts/test_experiment2.js"></script>
+			
 	<meta charset="utf-8">
   </head>
   
