Made aesthetic changes

--- a/TrackYourTrials.html
+++ b/TrackYourTrials.html
@@ -54,6 +54,7 @@
 	</nav>
   
   	<header class = "page-title">
+		<h1>GitHub is being a jerk erase this line later</h1>
 	  <h1 ng-show="setUp.showAllTeams">Tournament {{setUp.newTourn.tournName}}</h1>
     </header>
 	
