--- a/FrontPage.html
+++ b/FrontPage.html
@@ -24,8 +24,8 @@
 			<span class="icon-bar"></span>
 		  </button>
 		  
-		  <a class="navbar-brand " href="FrontPage.html">TrialTracker</a>
-		  
+		  <a class="navbar-brand" rel="home" href="FrontPage.html">TrialTracker</a>
+
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
@@ -56,7 +56,7 @@
 	  <h1 class = "jumbotron-message">Welcome to TrialTracker</h1>
 	  <p class = "jumboMessage">We know. We get it. It's cumbersome to track all of your mock trials information by yourself. There are so many rules that you have to memorize and follow. 
 	  There's a chance for human error. There's just got to be a better solution to this. Fear not! For TEAM CAGE has come up with a solution. TrialTracker pairs teams up for you busy busy folks, 
-	  adhering to the rules/tabulation manual set by American Mock Trial Association. Let us tabulate for you. All you have to do is click the button below to get started. </p>
+	  adhering to the rules/tabulation manual set by American Mock Trial Association. Let us tabulate for you. All you have to do is click the button below to get started. (Don't use Internet Explorer) </p>
 	  <p><a class="btn btn-primary btn-lg" href="TrackYourTrials.html" role="button">Start Tracking Your Trials!</a></p>
 	</div>
 	
