--- a/TrackYourTrials.html
+++ b/TrackYourTrials.html
@@ -73,7 +73,8 @@
 	</div>
 	
 	<div id="allTeams" style="position:absolute; left: 15%;">
-			<div id="teamChoicesSummary" class="statusMessage" ng-show="setUp.showChoices">Putting teams together...
+			<div id="teamChoicesSummary" class="statusMessage" ng-show="setUp.showChoices">
+			<input type="button" ng-click="setUp.pairTeams(setUp.listAllTeams)" class="button" value="Submit Round" id="startR_button">
 			<table cellspacing="0" cellpadding="0" id="teamRanktable">
 				<colgroup span="2"></colgroup>
 				<tbody>
@@ -91,9 +92,34 @@
 									<b>Team Record:</b> {{team.record}} <br>
 									<b>Team CS:</b> {{team.combinedStr}} <br>
 									<b>Team PD:</b> {{team.pointDiff}} <br>
-									<b>Ballot 1 result: </b> <input type="number" ng-model="team.temp1" id="ballot1pd" placeholder="-126 to +126"></input>
-									<b>Ballot 2 result: </b> <input type="number" ng-model="team.temp2" id="ballot2pd" placeholder="-126 to +126"></input>
-									<input type="button" value="Submit" id="submit_button" class="button" ng-click="setUp.addPoints(team)">
+									<b>Ballot 1 result: </b> <input type="number" ng-model="team.temp1" id="ballot1pd" min="-126" max="126" placeholder="-126 to +126"></input> <br>
+									<b>Ballot 2 result: </b> <input type="number" ng-model="team.temp2" id="ballot2pd" min="-126" max="126" placeholder="-126 to +126"></input> <br>
+									<input type="button" ng-show = "team.button" value="Submit" id="submit_button" class="button" ng-click="setUp.addPoints(team)">
+								</div>
+							</form>
+						</td>
+					</tr>
+				</tbody>
+			</table>	
+		</div>
+		<div id="teamChoicesSummary" class="statusMessage" ng-show="setUp.showPairings">
+			<input type="button" ng-click="submitTeams()" class="button" value="Next Round" id="startR_button">
+			<table cellspacing="0" cellpadding="0" id="teamRanktable">
+				<colgroup span="2"></colgroup>
+				<tbody>
+					<tr class="status">
+					    <th scope="col" title="Plaintiff"><h3>Plaintiff</h3></th>
+						<th scope="col" title="Defense"><h3>Defense</h3></th>
+					</tr>
+					<tr ng-repeat="pair in setUp.listAllTeams">
+						<td ng-repeat="team in pair">
+							<form id="resultsForm">
+								<div id="teamCard" class="teamCard">
+									<b>Team Name:</b> {{team.name}} <br>
+									<b>Team Number:</b> {{team.uniqueID}} <br>
+									<b>Team Record:</b> {{team.record}} <br>
+									<b>Team CS:</b> {{team.combinedStr}} <br>
+									<b>Team PD:</b> {{team.pointDiff}} <br>
 								</div>
 							</form>
 						</td>
@@ -117,7 +143,6 @@
 					<td ng-repeat="team in chosenPairings">
 							<form id="teamCardForm">
 								<div id="teamCard" class="teamCard">
-									<b>Team number</b> {{team.number + 1}}<br>
 									<b>Team name: </b> <input type="text" id="teamName{{team.number}}" ng-model = "team.name" placeholder="ex. Macalester Mock Trial Team"></input><br>
 									<b>Team ID: </b> <input type="text" id="teamID{{team.number}}" ng-model = "team.uniqueID" placeholder="ex. 99999"></input><br><br>
 								</div>
