--- a/main.html
+++ b/main.html
@@ -63,9 +63,7 @@
       <script type="text/ng-template" id="temp/screen1.html"><!--aka cara's front page-->
          <div class="jumbotron">
          <h1 class = "jumbotron-message">Welcome to TrialTracker</h1>
-         <p class = "jumboMessage">We know. We get it. It's cumbersome to track all of your mock trials information by yourself. There are so many rules that you have to memorize and follow. 
-         There's a chance for human error. There's just got to be a better solution to this. Fear not! For TEAM CAGE has come up with a solution. TrialTracker pairs teams up for you busy busy folks, 
-         adhering to the rules/tabulation manual set by American Mock Trial Association. Let us tabulate for you. All you have to do is click the button below to get started. (Don't use Internet Explorer) </p>
+         <p class = "jumboMessage">TrialTracker is a convenient way to pair teams, adhering to the rules/tabulation manual set by the American Mock Trial Association. </p>
          <p><a class="btn btn-primary btn-lg" ui-sref="screen2" role="button">Start Tracking Your Trials!</a></p>
          </div>
       </script>	
