index toolbar redirect

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<span class="icon-bar"></span>
 		  </button>
 		  
-		  <a class="navbar-brand" rel="home" href="FrontPage.html">TrialTracker</a>
+		  <a class="navbar-brand" rel="home" href="index.html">TrialTracker</a>
 
 		</div>
 
