--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
       <script src="js/bootstrap.min.js"></script>	
       <!-- Include our controllers -->
       <script src="js/main-app.js"></script>
-      <script src="js/screen1-controller.js"></script>
-      <!--<script src="js/screen2.js"></script>
-         <script src="js/screen3.js"></script>
+	  <script src="js/controllers/Screen2Ctrl.js"></script>	
+	  <script src="js/controllers/Screen3Ctrl.js"></script>	
+      <!--
          <script src="js/screen4.js"></script>-->
       <!-- CSS -->
       <link rel="stylesheet" type="text/css" href="resources/bootstrap.min.css">
@@ -56,37 +56,6 @@
       <!-- Above are html elements that will never change from page to page -->
       <div ui-view></div>
       <!-- Below are html elements that will never change from page to page -->
-
-	  
-      <!-- //I was getting a couldnt load error ... using template url in angular js: 
-         //http://stackoverflow.com/questions/16251420/couldnt-load-template-using-templateurl-in-angularjs  -->
-      <script type="text/ng-template" id="temp/screen1.html"><!--aka cara's front page-->
-         <div class="jumbotron">
-         <h1 class = "jumbotron-message">Welcome to TrialTracker</h1>
-         <p class = "jumboMessage">We know. We get it. It's cumbersome to track all of your mock trials information by yourself. There are so many rules that you have to memorize and follow. 
-         There's a chance for human error. There's just got to be a better solution to this. Fear not! For TEAM CAGE has come up with a solution. TrialTracker pairs teams up for you busy busy folks, 
-         adhering to the rules/tabulation manual set by American Mock Trial Association. Let us tabulate for you. All you have to do is click the button below to get started. (Don't use Internet Explorer) </p>
-         <p><a class="btn btn-primary btn-lg" ui-sref="screen2" role="button">Start Tracking Your Trials!</a></p>
-         </div>
-      </script>	
-	  
-	  <script type="text/ng-template" id="temp/screen2.html"><!--aka track your trials.html page-->
-		 	  <div id="settingUp" style="position: absolute; left: 29%;">
-		<form name="setUpForm" class="setUpCard">
-			Tournament Name: <input type="text" id="teamName" placeholder="ex. Party Like a Mock Star 2090" ng-model="setUp.newTourn.tournName"/><br><br>
-			Total Teams: <input type="number" id="totalTeams" placeholder="ex. 20" ng-model="setUp.newTourn.totalTeams"><br><br>
-			<input type="button" value="Submit" id="submit_button" class="button" ng-click="setUp.validate(setUp.newTourn.tournName, setUp.newTourn.totalTeams)">
-			<br>
-			<div id="errorMessage" class="errorMessage"></div>
-		</form>
-	</div>
-      </script>	
-	  
-	  
-	  <script type="text/ng-template" id="temp/screen3.html">
-	  <h1 ng-show="setUp.showAllTeams">Tournament {{firstBuild.tournName}}</h1>
-	</div>
-      </script>	
 
    </body>
 </html>
