Added 4th screen, still problems getting teams data to work using ng-model

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <script src="js/main-app.js"></script>
 	  <script src="js/controllers/Screen2Ctrl.js"></script>	
 	  <script src="js/controllers/Screen3Ctrl.js"></script>	
+	  <script src="js/controllers/Screen4Ctrl.js"></script>	
       <!--
          <script src="js/screen4.js"></script>-->
       <!-- CSS -->
