--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	  <script src="js/controllers/Screen2Ctrl.js"></script>	
 	  <script src="js/controllers/Screen3Ctrl.js"></script>	
 	  <script src="js/controllers/Screen4Ctrl.js"></script>	
+	  <script src="js/controllers/Screen5Ctrl.js"></script>	
       <!--
          <script src="js/screen4.js"></script>-->
       <!-- CSS -->
