--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html ng-app="tabtracker">
    <head>
+	  <title>Trial Tracker</title>
       <!-- Include the ui-router script and regular angular js script -->
       <script type="text/javascript" language="javascript" type="application/javascript" src="scripts/angular.min.js"></script>
       <script src="js/angular-ui-router.min.js"></script>
@@ -12,7 +13,7 @@
 	  <script src="js/controllers/Screen2Ctrl.js"></script>	
 	  <script src="js/controllers/Screen3Ctrl.js"></script>	
 	  <script src="js/controllers/Screen4Ctrl.js"></script>	
-	  <script src="js/controllers/Screen5Ctrl.js"></script>	
+	  <script src="js/controllers/Screen5Ctrl.js"></script>
       <!--
          <script src="js/screen4.js"></script>-->
       <!-- CSS -->
@@ -31,7 +32,7 @@
                <span class="icon-bar"></span>
                <span class="icon-bar"></span>
                </button>
-               <a class="navbar-brand" rel="home" ui-sref="screen1">TrialTracker TEST TEST TEST</a>
+               <a class="navbar-brand" rel="home" ui-sref="screen1">TrialTracker</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
