--- a/FrontPage.html
+++ b/FrontPage.html
@@ -1,70 +1,216 @@
 <!DOCTYPE html>
 <html ng-app="tabRunner">
   <head>
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+	
     <link rel="stylesheet" type="text/css" href="resources/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="resources/TrackYourTrials.css" /> 
+	
 	<script type="text/javascript" language="javascript" type="application/javascript" src="scripts/angular.min.js"></script>
     <script type="text/javascript" language="javascript" type="application/javascript" src="scripts/test_experiment2.js"></script>
-	<meta charset="utf-8">
+
+	<link href="resources/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+	
+	<title>Trial Tracker 2.0</title>
+	
   </head>
   
   <body>
 	
-	<nav class="navbar navbar-inverse nav">
+	    <!-- New Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
+        <div class="container topnav">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand topnav" href="C:/Users/hp/Desktop/CAGE/FrontPage.html">TrialTracker</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="#about">About</a>
+                    </li>
+					<li>
+                        <a href="#services">Services</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
 	
-	  <div class="container-fluid">
-		<!-- Brand and toggle get grouped for better mobile display -->
-		<div class="navbar-header">
-		
-			<!--Buttons with the three lines-->
-		  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-			<span class="sr-only">Toggle navigation</span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-		  </button>
-		  
-		  <a class="navbar-brand" rel="home" href="FrontPage.html">TrialTracker</a>
+	    <!-- Header -->
+    <a name="about"></a>
+    <div class="intro-header" background="C:\Users\hp\Desktop\CAGE\resources\img\intro-bg.jpg">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="intro-message">
+                        <h1>TrialTracker</h1>
+                        <h3>A Tabulation App</h3>
+                        <hr class="intro-divider">
+                        <ul class="list-inline intro-social-buttons">
+                            <li>
+                                <a href="C:\Users\hp\Desktop\CAGE\TrackYourTrials.html" class="btn btn-default btn-lg"><span class="network-name">Start Tracking Your Trials!</span></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /.container -->
+    </div>
+    <!-- /.intro-header -->
 
+	<!--Carousel in the making-->
+	<div id="myCarousel" class="carousel slide" data-ride="carousel">
+		<!-- Indicators -->
+		<ol class="carousel-indicators">
+			<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+			<li data-target="#myCarousel" data-slide-to="1"></li>
+		</ol>
+		<!-- Wrapper for slides -->
+		<div class="carousel-inner" role="listbox">
+			<div class="item active">
+				<img src="resources/img/white.png" alt="" class="img-responsive"> 
+				<div class="carousel-caption">
+					<h2 class="section-heading">Let us tabulate for you</h2>
+					<p class="lead">TrialTracker is a convenient way to pair teams, adhering to the rules/tabulation manual set by American Mock Trial Association.</p>
+				</div>
+			</div>
+
+			<div class="item">
+			  <img class="img-responsive" src="resources/img/white.png" alt="">
+			  <div class="carousel-caption">
+				    <h2 class="section-heading">Team CAGE</h2>
+					<p class="lead">A group of students from <a target="_blank" href="http://www.macalester.edu">Macalester College</a> that understands how the pairing process can be made easier. We are indeed a dog on a computer screen looking fabulous</p>
+			  </div>
+			</div>
 		</div>
+		 <!-- Controls -->
+		<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+		</a>
+		<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+			<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
+		</a>
+	</div>
+	<!--End of Carousel-->
+	
+	<!--Current stuff-->
+    <div class="content-section-a">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Let us tabulate for you</h2>
+                    <p class="lead">TrialTracker is a convenient way to pair teams, adhering to the rules/tabulation manual set by American Mock Trial Association.</p>
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <img class="img-responsive" src="resources/img/ipad.png" alt="">
+                </div>
+            </div>
+        </div>
+        <!-- /.container -->
 
-		<!-- Collect the nav links, forms, and other content for toggling -->
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			<ul class="nav navbar-nav">
-				<li><a href="TrackYourTrials.html">Track Your Trials<span class="sr-only">(current)</span></a></li>
-				
-			</ul>
-		  <ul class="nav navbar-nav navbar-right">
-			<li class="dropdown">
-			  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">About Us <span class="caret"></span></a>
-			  <ul class="dropdown-menu" role="menu">
-				<li><a href="#">Social Media</a></li>
-				<li><a href="http://www.macalester.edu">Our School</a></li>
-				<li><a href="#">Our Life Goals</a></li>
-				<li class="divider"></li>
-				<li><a href="#">Separated link</a></li>
-			  </ul>
-			</li>
-		  </ul>
-		</div><!-- /.navbar-collapse -->
-		
-	  </div><!-- /.container-fluid -->
-	  
-	</nav>
+    </div>
+    <!-- /.content-section-a -->
+
+    <div class="content-section-b">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Team CAGE</h2>
+                    <p class="lead">A group of students from <a target="_blank" href="http://www.macalester.edu">Macalester College</a> that understands how the pairing process can be made easier. We are indeed a dog on a computer screen looking fabulous</p>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                    <img class="img-responsive" src="resources/img/dog.png" alt="">
+                </div>
+            </div>
+        </div>
+        <!-- /.container -->
+    </div>
+    <!-- /.content-section-b -->
+
+	<a  name="contact"></a>
+    <div class="banner">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <h2>Learn more about Macalester's work:</h2>
+                </div>
+                <div class="col-lg-6">
+                    <ul class="list-inline banner-social-buttons">
+                        <li>
+                            <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                        </li>
+                        <li>
+                            <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!-- /.container -->
+    </div>
+    <!-- /.banner -->
 	
-	<div class="jumbotron">
-	  <h1 class = "jumbotron-message">Let us tabulate for you</h1>
-	  <p class = "jumboMessage">TrialTracker is a convenient way to pair teams, adhering to the rules/tabulation manual set by American Mock Trial Association.(Don't use Internet Explorer) </p>
-	  <p><a class="btn btn-primary btn-lg" href="TrackYourTrials.html" role="button">Start Tracking Your Trials!</a></p>
-	</div>
-	
-	<div id="logo" style="text-align:center">
-		<img src="resources/courthouse_logo.png" alt="TrialTracker" style="width:64px;height:64px">
-	</div>
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <ul class="list-inline">
+                        <li>
+                            <a href="#">Home</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="#about">About</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="#contact">Contact</a>
+                        </li>
+                    </ul>
+                    <p class="copyright text-muted small">Copyright &copy; Team CAGE 2014. All Rights Reserved</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 	
 		<!-- Latest compiled and minified JavaScript -->
 	<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>	
+	
+	    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
 
   </body>
 </html>
