Fixed an href error

--- a/TrackYourTrials.html
+++ b/TrackYourTrials.html
@@ -22,7 +22,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="C:/Users/hp/Desktop/startbootstrap-landing-page-1.0.3/FrontPage2.0.html">TrialTracker</a>
+                <a class="navbar-brand topnav" href="C:/Users/hp/Desktop/CAGE/FrontPage.html">TrialTracker</a>
             </div>
 			
             <!-- Collect the nav links, forms, and other content for toggling -->
