--- a/index.html
+++ b/index.html
@@ -19,43 +19,51 @@
       <!-- CSS -->
       <link rel="stylesheet" type="text/css" href="resources/bootstrap.min.css">
       <link rel="stylesheet" type="text/css" href="resources/TrackYourTrials.css" />
+	  
+	  <!--CSS from 2.0 version-->
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+	<link href="resources/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+	    
    </head>
+     
    <body>
-      <nav class="navbar navbar-inverse nav">
-         <div class="container-fluid">
+      	    <!-- New Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
+        <div class="container topnav">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-               <!-- Below are html elements that will never change from page to page -->
-               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-               <span class="sr-only">Toggle navigation</span></a>
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-               </button>
-               <a class="navbar-brand" rel="home" ui-sref="screen1">TrialTracker</a>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand topnav" ui-sref="screen1">TrialTracker</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-               <ul class="nav navbar-nav">
-                  <li><a ui-sref="screen2">Track Your Trials<span class="sr-only">(current)</span></a></li>
-               </ul>
-               <ul class="nav navbar-nav navbar-right">
-                  <li class="dropdown">
-                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">About Us <span class="caret"></span></a>
-                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">Social Media</a></li>
-                        <li><a href="http://www.macalester.edu">Our School</a></li>
-                        <li><a href="#">Our Life Goals</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                     </ul>
-                  </li>
-               </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="#about">About</a>
+                    </li>
+					<li>
+                        <a href="#services">Services</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Contact</a>
+                    </li>
+                </ul>
             </div>
             <!-- /.navbar-collapse -->
-         </div>
-         <!-- /.container-fluid -->
-      </nav>
+        </div>
+        <!-- /.container -->
+    </nav>
+	
       <!-- Above are html elements that will never change from page to page -->
       <div ui-view></div>
       <!-- Below are html elements that will never change from page to page -->
