Adjusting position of boxes.

--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
         <!-- /.container -->
     </nav>
 	
+	<div class="container">
+		<div class="row">
+			<hr class="section-heading-spacer">
+			<div class="clearfix"></div>
+		</div>
+    </div>
+	
       <!-- Above are html elements that will never change from page to page -->
       <div ui-view></div>
       <!-- Below are html elements that will never change from page to page -->
