Implemented global objects and variables in model.js

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
       <script src="js/bootstrap.min.js"></script>	
       <!-- Include our controllers -->
       <script src="js/main-app.js"></script>
-	  <script src="js/controllers/Screen2Ctrl.js"></script>	
-	  <script src="js/controllers/Screen3Ctrl.js"></script>	
+	  <script src="js/controllers/Screen2Ctrl.js"></script>
+	  <script src="js/controllers/Screen3Ctrl.js"></script>
 	  <script src="js/controllers/Screen4Ctrl.js"></script>	
 	  <script src="js/controllers/Screen5Ctrl.js"></script>
+	  <script src="js/model.js"></script>
       <!--
          <script src="js/screen4.js"></script>-->
       <!-- CSS -->
