Fixed the spacer (I hope)

--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
 			</div>
 			<!-- /.container -->
 		</nav>
-
+		
 		<hr class="section-heading-spacer">
+		<div class="clearfix"></div>
 		
       <!-- Above are html elements that will never change from page to page -->
 		<div ui-view></div>
