--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right">
-						<li> <a href="#about">About</a> </li>
-						<li> <a href="#contact">Contact</a> </li>
+						<li> <a ui-sref="screen1">About</a> </li>
 					</ul>
 				</div>
 				<!-- /.navbar-collapse -->
