Added new screen6ctrl and new link on nav bar to end tournament and display winners.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 						<span class="icon-bar"></span>
 					</button>
 					<a class="navbar-brand topnav" ui-sref="screen1">TrialTracker</a>
+					<a class="navbar-brand topnav" ui-sref="screen6">Test: End Tournament</a>
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
