Referenced Screen6Ctrl in index. Added angular.js to script folder. Still trying to figure out why screen6 is not displaying top teams properly.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<script src="js/controllers/Screen3Ctrl.js"></script>	
 		<script src="js/controllers/Screen4Ctrl.js"></script>	
 		<script src="js/controllers/Screen5Ctrl.js"></script>
+		<script src="js/controllers/Screen6Ctrl.js"></script>
 		<script src="js/model.js"></script>
 		<!-- CSS -->
 		<link rel="stylesheet" type="text/css" href="resources/bootstrap.min.css">
