--- a/index.html
+++ b/index.html
@@ -46,12 +46,6 @@
 					<a class="navbar-brand topnav" ui-sref="screen1">TrialTracker</a>
 					<a class="navbar-brand topnav" ui-sref="screen6">Test: End Tournament</a>
 				</div>
-				<!-- Collect the nav links, forms, and other content for toggling -->
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav navbar-right">
-						<li> <a ui-sref="screen1">About</a> </li>
-					</ul>
-				</div>
 				<!-- /.navbar-collapse -->
 			</div>
 			<!-- /.container -->
@@ -61,8 +55,18 @@
 		<div class="clearfix"></div>
 		
       <!-- Above are html elements that will never change from page to page -->
-		<div ui-view></div>
+		<div class="mainView" ui-view></div>
       <!-- Below are html elements that will never change from page to page -->
+	  
+	    <footer>
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12">
+						<p class="copyright text-muted small">Copyright &copy; Team CAGE 2014. All Rights Reserved</p>
+					</div>
+				</div>
+			</div>
+		</footer>
 
 	</body>
 </html>
