Clean up. Deleted old html and redundant scripts folder.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Trial Tracker</title>
 		<!-- Include the ui-router script and regular angular js script -->
-		<script type="text/javascript" language="javascript" type="application/javascript" src="scripts/angular.min.js"></script>
+		<script type="text/javascript" language="javascript" type="application/javascript" src="js/angular.min.js"></script>
 		<script src="js/angular-ui-router.min.js"></script>
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="js/jquery-2.1.3.min.js"></script>
@@ -18,7 +18,7 @@
 		<script src="js/model.js"></script>
 		<!-- CSS -->
 		<link rel="stylesheet" type="text/css" href="resources/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="resources/TrackYourTrials.css" />
+		<link rel="stylesheet" type="text/css" href="resources/trialtracker.css" />
 	  
 	  <!--CSS from 2.0 version-->
 		<meta charset="utf-8">
