Fixed footer issues

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
 		<div class="mainView" ui-view></div>
       <!-- Below are html elements that will never change from page to page -->
 	  
+		<hr class="section-heading-spacer">
+		<div class="clearfix"></div>
+	  
 	    <footer>
 			<div class="container">
 				<div class="row">
