--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<script src="js/controllers/Screen4Ctrl.js"></script>	
 		<script src="js/controllers/Screen5Ctrl.js"></script>
 		<script src="js/controllers/Screen6Ctrl.js"></script>
+		<script src="js/controllers/AutoPopCtrl.js"></script>
 		<script src="js/model.js"></script>
 		<!-- CSS -->
 		<link rel="stylesheet" type="text/css" href="resources/bootstrap.min.css">
@@ -39,6 +40,7 @@
 				<div class="navbar-header">
 					<a class="navbar-brand topnav" ui-sref="screen1">TrialTracker</a>
 					<a class="navbar-brand topnav" ui-sref="screen6">Test: End Tournament</a>
+					<a class="navbar-brand topnav" ng-click="runAutoPop()">Test: Auto Populate</a>
 				</div>
 				<!-- /.navbar-collapse -->
 			</div>
