remove old code, add Underscore library

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<script src="js/angular-ui-router.min.js"></script>
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="js/jquery-2.1.3.min.js"></script>
+		<script src="js/underscore-min.js"></script>
 		<script src="js/bootstrap.min.js"></script>	
 		<!-- Include our controllers -->
 		<script src="js/main-app.js"></script>
