--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<script src="js/angular-ui-router.min.js"></script>
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="js/jquery-2.1.3.min.js"></script>
-		<script src="js/underscore-min.js"></script>
+		<!--<script src="js/underscore-min.js"></script>-->
 		<script src="js/bootstrap.min.js"></script>	
 		<!-- Include our controllers -->
 		<script src="js/main-app.js"></script>
@@ -19,7 +19,9 @@
 		<script src="js/model.js"></script>
 		<!-- CSS -->
 		<link rel="stylesheet" type="text/css" href="resources/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="resources/trialtracker.css" />
+		<link rel="stylesheet" type="text/css" href="resources/trialtracker.css">
+		<link rel="stylesheet" type="text/css" href="resources/animations.css">
+
 	  
 	  <!--CSS from 2.0 version-->
 		<meta charset="utf-8">
