--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<script src="js/controllers/Screen5Ctrl.js"></script>
 		<script src="js/controllers/Screen6Ctrl.js"></script>
 		<script src="js/model.js"></script>
+		<script src="js/pairinglogic.js"></script>
 		<!-- CSS -->
 		<link rel="stylesheet" type="text/css" href="resources/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="resources/trialtracker.css">
@@ -41,6 +42,7 @@
 				<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
 					<a class="navbar-brand topnav" ui-sref="screen1">TrialTrackr</a>
+					<a class="navbar-brand topnav" ui-sref="screen7">Instructions</a>
 				</div>
 				<!-- /.navbar-collapse -->
 			</div>
