Um. Trying to do an about page. Also changed screen7 to instructions.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 				<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
 					<a class="navbar-brand topnav" ui-sref="screen1">TrialTrackr</a>
-					<a class="navbar-brand topnav" ui-sref="screen7">Instructions</a>
+					<a class="navbar-brand topnav" ui-sref="instructions">Instructions</a>
+					<a class="navbar-brand navbar-right" ir-sref="About"> About Us </a>			
 				</div>
 				<!-- /.navbar-collapse -->
 			</div>
@@ -63,7 +64,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
-						<p class="copyright text-muted small">Copyright &copy; Team CAGE 2014. All Rights Reserved</p>
+						<p class="copyright text-muted small">Copyright &copy; Team CAGE 2015. under the Apache License </p>
 					</div>
 				</div>
 			</div>
